# open-control

./: .dockerignore  .gitignore  .mcp.json  .tmux.conf  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  KNOWN_ISSUES.md  LICENSE  Makefile  PATCHES.md  README.md  README_DELEGATE_TOOL.md  SECURITY.md  boot.py  docker-compose.override.yml  docker-compose.yml  new-features.md  package-lock.json  playwright-cli.json  poc_terminal_bridge.py  pyproject.toml  reboot_nanobot.sh  run-epic2.sh  terminal_bridge.py  zeroclaw-convexbridge-architecture.md
.claude/: settings.json
.claude/ask-bridge/: claude-ask.sh  package-lock.json  package.json  server.mjs  test-connection.sh
.claude/commands/: create-nanobot-agent.md
.github/: dependabot.yml  pull_request_template.md
_test_permission_bridge/: permission_log.jsonl  permission_server.py  run_test.sh
agent_docs/: building_the_project.md  database_schema.md  harness_engineering.md  running_tests.md  scaling_decisions.md  service_architecture.md  service_communication_patterns.md
dashboard/: .prettierignore  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts  vitest.setup.ts
docs/: ARCHITECTURE.md
mc/: __init__.py  agent_assist.py  agent_sync.py  ask_user_handler.py  ask_user_registry.py  ask_user_watcher.py  board_utils.py  bridge.py  bridge_subscriptions.py  cc_executor.py  cc_provider.py  cc_step_runner.py  cc_workspace.py  chat_handler.py  cli.py  cli_agents.py  cli_config.py  executor.py  gateway.py  init_wizard.py  mcp_bridge.py  mcp_ipc_server.py  mention_handler.py  mention_watcher.py  orchestrator.py  orientation.py  output_enricher.py  plan_materializer.py  plan_negotiator.py  plan_parser.py  planner.py  process_manager.py  process_monitor.py  provider_factory.py  review_handler.py  state_machine.py  step_dispatcher.py  test_agent_assist.py  test_bridge.py  test_cli_agents.py  (+19 more)
mc-ios/: .gitignore  Package.resolved  Package.swift  project.yml
scripts/: audit_memory_cohesion.py  docker-entrypoint-dev.sh  docker-entrypoint.sh  docker-test.sh  init-convex.sh  repro_forced_ask_user_flow.py  repro_provider_cli_step.py  repro_squad_ask_user_flow.py  run_agent_validation.py  sync_codex_login.py  test_auto_title_live.py
tests/: conftest.py  test_channel_manager_mc.py  test_consolidate_offset.py  test_cron_service.py  test_cron_tool.py  test_init_wizard.py  test_mc_channel.py  test_run_agent_validation.py
tmux_claude_control/: README.md  __init__.py  claude_controller.py  orchestrator.py  screen_parser.py  transcript_reader.py
(+1539 files in other folders)
