[project]
name = "nanobot-ennio"
version = "0.1.0"
description = "Multi-agent orchestration platform built on nanobot"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "nanobot-ai",
    "convex>=0.7.0,<1.0.0",
    "filelock>=3.24.3",
]

[project.scripts]
nanobot = "boot:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mc", "boot", "tmux_claude_control"]

[tool.uv.sources]
nanobot-ai = { path = "vendor/nanobot", editable = true }

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
timeout = 60
timeout_method = "thread"

[dependency-groups]
dev = [
    "pytest>=9.0.0,<10.0.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
    "pytest-timeout>=2.3.0,<3.0.0",
    "ruff>=0.1.0",
]
skills = [
    "google-api-python-client>=2.190.0",
    "google-auth>=2.48.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.2.4",
    "msal>=1.34.0",
    "requests>=2.32.5",
]
