[project]
name = "nanobot-mcontrol"
version = "0.1.0"
description = "Multi-agent orchestration platform built on nanobot"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "nanobot-ai",
    "claude-code-backend",
    "convex>=0.7.0,<1.0.0",
    "filelock>=3.24.3",
    "sqlite-vec>=0.1.6",
]

[project.scripts]
nanobot = "boot:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mc", "boot", "tmux_claude_control"]

[tool.uv.sources]
nanobot-ai = { path = "vendor/nanobot", editable = true }
claude-code-backend = { path = "vendor/claude-code", editable = true }

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["vendor"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
timeout = 60
timeout_method = "thread"

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.0,<10.0.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
    "pytest-timeout>=2.3.0,<3.0.0",
    "ruff>=0.1.0",
]
skills = [
    "google-api-python-client>=2.190.0",
    "google-auth>=2.48.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.2.4",
    "msal>=1.34.0",
    "requests>=2.32.5",
]
